# ApollosDO

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.md.bak  walkthrough.md
.do/: app.yaml
docs/: ADR.md  BLUEPRINT.md  CONTRACTS.md  DEVPOST_SUBMISSION_DRAFT.md  FINAL_SUBMISSION_CHECKLIST.md  README.md  VIDEO_DEMO_SCRIPT.md  apollos_coding_agent_prompt.md
native/android/app/src/main/kotlin/com/apollos/nativeapp/: SileroVad.kt
scripts/: google_genai_sdk_bridge.py
src/: agent.rs  browser_executor.rs  demo_handler.rs  digital_agent.rs  human_fallback.rs  lib.rs  main.rs  nova_reasoning_client.rs  session.rs  status_bus.rs  types.rs  ws_registry.rs
